--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "test:e2e:ios:release:build": "detox build --configuration ios.sim.release",
+    "test:e2e:ios:release": "detox test --configuration ios.sim.release",
+    "test:e2e:ios:debug:build": "detox build --configuration ios.sim.debug",
+    "test:e2e:ios:debug": "detox test --configuration ios.sim.debug"
   },
   "dependencies": {
     "react": "17.0.2",
@@ -17,6 +21,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/detox": "^18.1.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.4",
     "@types/react-test-renderer": "^17.0.1",
@@ -26,6 +31,7 @@
     "detox": "^19.4.2",
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
+    "jest-circus": "^27.4.6",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
